--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ bytes = "1.10.1"
 anyhow = "1.0.99"
 bincode = "2.0.1"
 serde = { version = "1", features = ["derive"] }
-clap = {version = "1", features = ["derive"] }
+clap = {version = "4.5.47", features = ["derive"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.20"
+tokio-util = { version="0.7.16", features=["codec"] }
