--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 tokio = { version = "1.47.1", features = ["full"] }
-redis-protocol = "6.0.0"
+redis-protocol = { version = "6.0.0", features = ["codec"] }
 bytes = "1.10.1"
 anyhow = "1.0.99"
 bincode = "2.0.1"
@@ -14,3 +14,9 @@ clap = {version = "4.5.47", features = ["derive"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.20"
 tokio-util = { version="0.7.16", features=["codec"] }
+futures = "0.3"
+
+
+[[bin]]
+name="client"
+path="src/client/main.rs"
