--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ tracing = "0.1.41"
 tracing-subscriber = "0.3.20"
 tokio-util = { version="0.7.16", features=["codec"] }
 futures = "0.3"
+thiserror = "2.0.16"
 
 
 [[bin]]
