--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ tracing-subscriber = "0.3.20"
 tokio-util = { version="0.7.16", features=["codec"] }
 futures = "0.3"
 thiserror = "2.0.16"
+regex = "1.11.3"
 
 
 [[bin]]
